nav overlaping bug fixed

--- a/app/Components/MobileNav/MobileNav.scss
+++ b/app/Components/MobileNav/MobileNav.scss
@@ -15,7 +15,7 @@
         align-items: center;
         justify-content: space-between;
         gap: 80px;
-        height: 65px;
+        height: 85px;
 
         .logo {
             border-radius: 40px;
